--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Github Battle</title>
+    <title>RaP-NLP</title>
     <link
       rel="icon"
       type="image/png"
