change id of react injection

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div id="src"></div>
+    <div id="app"></div>
     <script type="text/javascript" src="index_bundle.js"></script>
   </body>
 </html>
